--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -21,6 +21,10 @@ en:
             credentials:
               required: "are required"
               invalid: "is not valid"
+        discourse_activity_pub_attachment:
+          attributes:
+            media_type:
+              invalid: "is not valid"
         discourse_activity_pub:
           attributes:
             model_type:
