--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -129,6 +129,7 @@ en:
     user:
       error:
         failed_to_create: "Failed to create user for %{actor_id}: %{message}"
+      deleted: "User destroyed by ActivityPub Delete Activity: %{activity_id}"
 
     object:
       note:
