--- a/config/locales/server.en.yml
+++ b/config/locales/server.en.yml
@@ -134,7 +134,7 @@ en:
     user:
       error:
         failed_to_create: "Failed to create user for %{actor_id}: %{message}"
-      deleted: "User destroyed by ActivityPub Delete Activity: %{username}"
+      destroyed: "User destroyed by ActivityPub Delete Activity: %{username}"
 
     object:
       note:
